exports[`test A standard order 1`] = `
<li
  className="gcUgGD">
  <span
    className="ihJNsh">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="igKvAR">
    MOOIE 456 TEST
  </span>
  <span
    className="dKSGyu">
    <div>
       
      <div>
         
        Name of the product
         
      </div>
      <div>
         
        Another product
         
      </div>
       
    </div>
  </span>
  <span
    className="eSGqFF">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="sPQzX">
    completed
  </span>
  <span
    className="emvmXy">
    <a
      aria-label="Download invoice"
      className="cWcbKk"
      href="http://somelink"
      iconSource="download.svg"
      to="http://somelink" />
  </span>
</li>
`;

exports[`test An Order with a disabled invoice button 1`] = `
<li
  className="gcUgGD">
  <span
    className="ihJNsh">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="igKvAR">
    MOOIE 456 TEST
  </span>
  <span
    className="dKSGyu">
    <div>
       
      <div>
         
        Name of the product
         
      </div>
      <div>
         
        Another product
         
      </div>
       
    </div>
  </span>
  <span
    className="eSGqFF">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="sPQzX">
    pending
  </span>
  <span
    className="emvmXy">
    <button
      aria-label="Download invoice"
      className="wmLcN dsTvgF"
      disabled="disabled"
      to="http://somelink" />
  </span>
</li>
`;
